fixing alignwide style for images

--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -66,7 +66,7 @@ p {
 			padding: 0px 15px;
 		}
 		img {
-			max-width: calc(min(800px, 100%));
+			max-width: 100%;
 			margin-top: 20px;
 		}
 	}
